# compassion-odoo-installer

./: .mrconfig  install.sh  pyproject.toml  readme.md  requirements.txt
