[tool.poetry]
name = "magic_odoo"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvainlosey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alabaster = "0.7.12"
Babel = "2.3.4"
bcrypt = "3.1.7"
beautifulsoup4 = "4.9.1"
bs4 = "0.0.1"
CacheControl = "0.12.6"
cachetools = "4.1.0"
certifi = "2020.4.5.1"
cffi = "1.14.0"
chardet = "3.0.4"
click = "7.1.2"
coverage = "5.1"
cryptography = "2.9.2"
cssselect = "1.1.0"
cycler = "0.10.0"
decorator = "4.0.10"
detectlanguage = "1.4.0"
docutils = "0.12"
ebaysdk = "2.1.5"
feedparser = "5.2.1"
msgpack = "1.0.0"
pyasn1 = "0.4.8"
pycparser = "2.20"
six = "1.15.0"
firebase-admin = "4.3.0"
geojson = "2.5.0"
gevent = "1.3.4"
google-api-core = "1.19.0"
google-api-python-client = "1.9.1"
google-auth = "1.16.1"
google-auth-httplib2 = "0.0.3"
google-cloud-core = "1.3.0"
google-cloud-firestore = "1.7.0"
google-cloud-storage = "1.28.1"
google-resumable-media = "0.5.1"
googleapis-common-protos = "1.52.0"
greenlet = "0.4.13"
grpcio = "1.29.0"
html2text = "2016.9.19"
httplib2 = "0.18.1"
idna = "2.7"
imagesize = "1.2.0"
Jinja2 = "2.10.1"
jwt = "1.0.0"
kiwisolver = "1.2.0"
libsass = "0.12.3"
Mako = "1.0.4"
MarkupSafe = "0.23"
num2words = "0.5.6"
odoo-sphinx-autodoc = "0.3.2"
ofxparse = "0.16"
opencv-contrib-python = "4.2.0.34"
opencv-python = "4.2.0.34"
packaging = "20.4"
pandas = "1.0.4"
paramiko = "2.7.1"
passlib = "1.6.5"
pbr = "5.4.5"
pdf2image = "1.13.1"
pdfminer = "20191125"
"pdfminer.six" = {git = "https://github.com/pdfminer/pdfminer.six", rev = "33b60dfd5414bf91fa232550528973b07028ff64"}
phonenumbers = "8.12.5"
protobuf = "3.12.2"
psutil = "4.3.1"
py-Asterisk = "0.5.18"
pyasn1-modules = "0.2.8"
pycryptodome = "3.9.7"
pydot = "1.2.3"
Pygments = "2.6.1"
pyminizip = "0.2.4"
PyNaCl = "1.4.0"
pyparsing = "2.1.10"
PyPDF2 = "1.26.0"
pyquery = "1.4.1"
pyserial = "3.1.1"
pysftp = "0.2.9"
pysmb = "1.2.1"
python-coveralls = "2.9.3"
python-http-client = "3.2.7"
python-magic = "0.4.18"
python-stdnum = "1.13"
pyusb = "1.0.0"
PyYAML = "5.3.1"
pyzbar = "0.1.8"
qrcode = "5.3"
regex = "2020.5.14"
reportlab = "3.3.0"
requests = "2.20.0"
rsa = "4.0"
sendgrid = "6.3.1"
Shapely = "1.7.0"
simplejson = "3.17.0"
snowballstemmer = "2.0.0"
sortedcontainers = "2.1.0"
Sphinx = "3.0.4"
sphinx-bootstrap-theme = "0.7.1"
sphinx-intl = "2.0.1"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "1.0.3"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.4"
suds-jurko = "0.6"
timezonefinder = "4.4.0"
Unidecode = "1.1.1"
uritemplate = "3.0.1"
urllib3 = "1.24.3"
psycopg2-binary = "^2.8.5"
pycups = "^2.0.1"
python-ldap = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
